@@ -1,0 +1,16 @@
+======
+Fixers
+======
+
+.. module:: werkzeug.contrib.fixers
+
+.. versionadded:: 0.5
+
+.. docstring:: . [3:-3]
+
+
+.. autoclass:: LighttpdCGIRootFix
+
+.. autoclass:: PathInfoFromRequestUriFix
+
+.. autoclass:: ProxyFix
